Ajustes de modo offline y links rotos

--- a/index.html
+++ b/index.html
@@ -58,84 +58,96 @@
     <div class="sections">
         <div class="sections-wraper">
             <section id="section1">
-                <div class="blockInfo">
-                    <h4>Desarrollador Web Full Stack</h4>
-                    <hr>
-                    <p>Hola, soy Jeyson. Tengo 3 años de expieriencia en el desarrollo de aplicaciones. He trabajado en proyectos para optimizar el rendimiento de sitios web y mejorar la experiencia de usuario.</p>
-                    <a type="button" class="btn btn-info btnDownload" href="assets/pdf/HVJeysonVega.pdf" download="Perfil">Descargar perfil</a>
-                </div>
-                <div class="gesture d-lg-none ani-gesture">
-                    <img src="/images/gesture.svg" class="img-responsive">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="blockInfo">
+                            <h4>Desarrollador Web Full Stack</h4>
+                            <hr>
+                            <p>Hola, soy Jeyson. Tengo 3 años de expieriencia en el desarrollo de aplicaciones. He trabajado en proyectos para optimizar el rendimiento de sitios web y mejorar la experiencia de usuario.</p>
+                            <a type="button" class="btn btn-info btnDownload" href="assets/pdf/HVJeysonVega.pdf" download="Perfil">Descargar perfil</a>
+                        </div>
+                    </div>
+                    <div class="col-md-6 d-none d-sm-block" style="padding: 0 20px;">
+                        <img src="/images/me.png" alt="" style="position: relative;bottom: -130px;">
+                    </div>
+                    <div class="gesture d-lg-none ani-gesture">
+                        <img src="/images/gesture.svg" class="img-responsive">
+                    </div>
                 </div>
             </section>
             <section id="section2">
                 <div class="row h-100">
-                    <div class="col-xs-12 col-md-6 p-5 text-justify">
+                    <div class="col-xs-12 col-md-12 p-5 text-justify">
                         <h4>Acerca de mi</h4>
                         <hr>
-                        <h5>Jeyson Vega</h5>
-                        <h6>Desarrollador web full stack</h6>
-                        <P>Ingeniero de sistemas con experiencia en el desarrollo de aplicaciones web y de escritorio, gestión de procesos de negocio y conocimiento de diferentes lenguajes de programación.</P>
-                        <p>Disfruto de mi trabajo, de enseñar todo lo relacionado con tecnología que esté a mi alcance, y de adquirir nuevos conocimientos día a día.</p>
 
-                        <h6>¿Qué estoy haciendo?</h6>
-                        <div class="row">
-                            <div class="col-4">
-                                <div class="service">
-                                    <div class="icon"><i class="fas fa-laptop-code"></i></div>
-                                    <h6>Experiencia de usuario (UX)</h6>
-                                </div>
-                                <!-- end .service -->
+                        <div class="row p-sm-5">
+                            <div class="col-12 col-sm-6 p-sm-5">
+                                <h5>Jeyson Vega</h5>
+                                <h6>Desarrollador web full stack</h6>
+                                <P>Ingeniero de sistemas con experiencia en el desarrollo de aplicaciones web y de escritorio, gestión de procesos de negocio y conocimiento de diferentes lenguajes de programación.</P>
+                                <p>Disfruto de mi trabajo, de enseñar todo lo relacionado con tecnología que esté a mi alcance, y de adquirir nuevos conocimientos día a día.</p>
                             </div>
-                            <!-- end .col-sm-4 -->
-                            <div class="col-4">
-                                <div class="service">
-                                    <div class="icon"><i class="fas fa-mobile-alt"></i></div>
-                                    <h6>Desarrollo de aplicaciones</h6>
+                            <div class="col-12 col-sm-6">
+                                <h6>¿Qué estoy haciendo?</h6>
+                                <div class="row">
+                                    <div class="col-4">
+                                        <div class="service">
+                                            <div class="icon"><i class="fas fa-laptop-code"></i></div>
+                                            <h6>Experiencia de usuario (UX)</h6>
+                                        </div>
+                                        <!-- end .service -->
+                                    </div>
+                                    <!-- end .col-sm-4 -->
+                                    <div class="col-4">
+                                        <div class="service">
+                                            <div class="icon"><i class="fas fa-mobile-alt"></i></div>
+                                            <h6>Desarrollo de aplicaciones</h6>
+                                        </div>
+                                        <!-- end .service -->
+                                    </div>
+                                    <!-- end .col-sm-4 -->
+                                    <div class="col-4">
+                                        <div class="service">
+                                            <div class="icon"><i class="fab fa-node-js"></i></div>
+                                            <h6>web scrapping (extracción)</h6>
+                                        </div>
+                                        <!-- end .service -->
+                                    </div>
+                                    <!-- end .col-sm-4 -->
                                 </div>
-                                <!-- end .service -->
-                            </div>
-                            <!-- end .col-sm-4 -->
-                            <div class="col-4">
-                                <div class="service">
-                                    <div class="icon"><i class="fab fa-node-js"></i></div>
-                                    <h6>web scrapping (extracción)</h6>
+
+                                <h6>Mis hobbies</h6>
+                                <div class="row">
+                                    <div class="col-4">
+                                        <div class="service">
+                                            <div class="icon"><i class="fas fa-guitar"></i></div>
+                                            <h6>Música</h6>
+                                        </div>
+                                        <!-- end .service -->
+                                    </div>
+                                    <!-- end .col-sm-4 -->
+                                    <div class="col-4">
+                                        <div class="service">
+                                            <div class="icon"><i class="fas fa-plane-departure"></i></div>
+                                            <h6>Viajar</h6>
+                                        </div>
+                                        <!-- end .service -->
+                                    </div>
+                                    <!-- end .col-sm-4 -->
+                                    <div class="col-4">
+                                        <div class="service">
+                                            <div class="icon"><i class="fas fa-book"></i></div>
+                                            <h6>Libros</h6>
+                                        </div>
+                                        <!-- end .service -->
+                                    </div>
+                                    <!-- end .col-sm-4 -->
                                 </div>
-                                <!-- end .service -->
                             </div>
-                            <!-- end .col-sm-4 -->
                         </div>
 
-                        <h6>Mis hobbies</h6>
-                        <div class="row">
-                            <div class="col-4">
-                                <div class="service">
-                                    <div class="icon"><i class="fas fa-guitar"></i></div>
-                                    <h6>Música</h6>
-                                </div>
-                                <!-- end .service -->
-                            </div>
-                            <!-- end .col-sm-4 -->
-                            <div class="col-4">
-                                <div class="service">
-                                    <div class="icon"><i class="fas fa-plane-departure"></i></div>
-                                    <h6>Viajar</h6>
-                                </div>
-                                <!-- end .service -->
-                            </div>
-                            <!-- end .col-sm-4 -->
-                            <div class="col-4">
-                                <div class="service">
-                                    <div class="icon"><i class="fas fa-book"></i></div>
-                                    <h6>Libros</h6>
-                                </div>
-                                <!-- end .service -->
-                            </div>
-                            <!-- end .col-sm-4 -->
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-6">
-                        <img src="images/ownPicture2.png" class="full-image w-100" alt="">
+
                     </div>
                 </div>
             </section>
@@ -507,7 +519,7 @@
 
 
     <!-- Background video -->
-    <script src="plugins/jquery.tubular.1.0.js"></script>
+    <!-- <script src="plugins/jquery.tubular.1.0.js"></script> -->
 
     <!-- Tool Tip Guide! -->
     <script src="plugins/tourtipguide/static/js/tourtipguide.js"></script>
