--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="fonts/fontawesome5.13.0/css/all.css">
     <!-- <link rel="stylesheet" href="css/masonry-docs.css"> -->
-
+    <link rel="manifest" href="/manifest.json">
     <script src="js/masonry.pkgd.min.js"></script>
 
 </head>
