--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
         <a class="navbar-brand nav-link" href="section1">
-            <img src="images/icons/test.png" alt="">
+            <img src="images/icons/logo.png" alt="">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -64,7 +64,7 @@
                             <h4>Desarrollador Web Full Stack</h4>
                             <hr>
                             <p>Hola, soy Jeyson. Tengo 3 años de expieriencia en el desarrollo de aplicaciones. He trabajado en proyectos para optimizar el rendimiento de sitios web y mejorar la experiencia de usuario.</p>
-                            <a type="button" class="btn btn-info btnDownload" href="assets/pdf/HVJeysonVega.pdf" download="Perfil">Descargar perfil</a>
+                            <a type="button" class="btn btn-info btnDownload" href="assets/pdf/HVJeysonVega_1.pdf" download="Perfil">Descargar perfil</a>
                         </div>
                     </div>
                     <div class="col-md-6 d-none d-sm-block" style="padding: 0 20px;">
@@ -155,7 +155,7 @@
                 <div class="container">
                     <h2>Habilidades</h2>
                     <div class="row">
-                        <div class="col-sm-6">
+                        <div class="col-sm-6 mt-3">
                             <h4>Conocimiento técnico</h4>
                             <label class="progress-bar-label">HTML  CSS</label>
                             <div class="progress">
@@ -194,74 +194,39 @@
 
                         </div>
                         <!-- end .col-sm-6 -->
-                        <div class="col-sm-6 conocimientoEspecifico">
+                        <div class="col-sm-6 conocimientoEspecifico mt-3">
                             <h4>Conocimiento específico</h4>
                             <div class="row">
-                                <div class="col-2">
-                                    <a target="_blank" href="https://udemy-certificate.s3.amazonaws.com/image/UC-YIAX2MLT.jpg?v=1571100584000" title="PWA - Aplicaciones Web Progresivas: De cero a experto">
-                                        <img class="w-100 animate" src="images/icons/pwa.png">
+                                <div class="col-4">
+                                    <a target="_blank" title="JQuery">
+                                        <img class="w-100 animate" src="images/icons/jquery.png">
                                     </a>
                                 </div>
-                                <div class="col-2">
-                                    <a target="_blank" href="https://udemy-certificate.s3.amazonaws.com/image/UC-HFYP945A.jpg?v=1524076446000" title="Angular: De cero a experto creando aplicaciones">
+                                <div class="col-4">
+                                    <a target="_blank" href="https://udemy-certificate.s3.amazonaws.com/image/UC-HFYP945A.jpg?v=1524076446000" title="Angular">
                                         <img class="w-100 animate" src="images/icons/angular.png">
                                     </a>
                                 </div>
-                                <div class="col-2">
-                                    <a target="_blank" href="https://udemy-certificate.s3.amazonaws.com/image/UC-58ffa6c7-afe6-4bb9-8245-38768d91b1b4.jpg?v=1585366985000" title="Node: De cero a experto">
-                                        <img class="w-100 animate" src="images/icons/node-cero-experto.png" />
+                                <div class="col-4">
+                                    <a target="_blank" href="https://udemy-certificate.s3.amazonaws.com/image/UC-58ffa6c7-afe6-4bb9-8245-38768d91b1b4.jpg?v=1585366985000" title="Node">
+                                        <img class="w-100 animate" src="images/icons/nodejs.png" />
                                     </a>
                                 </div>
-                                <div class="col-2">
-                                    <img class="w-100 animate" src="images/icons/flutter-disenos_disabled.png" title="Aún no termina el curso: Flutter: Diseños profesionales y animaciones"></div>
-                                <div class="col-2">
-                                    <img class="w-100 animate" src="images/icons/flutter_disabled.png" title="Aún no termina el curso: Flutter: Tu guía completa de desarrollo para IOS y Android"></div>
-                                <div class="col-2">
-                                    <img class="w-100 animate" src="images/icons/ionic-4_disabled.png" title="Aún no termina el curso: ionic: Crear aplicaciones IOS, Android y PWAs con Angular"></div>
-                                <div class="col-2">
-                                    <img class="w-100 animate" src="images/icons/git-github_disabled.png" title="Aún no termina el curso: GIT+GitHub: Todo un sistema de control de versiones de cero"></div>
-                                <div class="col-2">
-                                    <img class="w-100 animate" src="images/icons/redux-ngrx_disabled.png" title="Aún no termina el curso: REDUX en Angular con NGRX: Desde las bases hasta la práctica"></div>
-                                <div class="col-2">
-                                    <img class="w-100 animate" src="images/icons/js-moderno_disabled.png" title="Aún no termina el curso: JavaScript Moderno: Guía para dominar el lenguaje"></div>
-                                <div class="col-2">
-                                    <img class="w-100 animate" src="images/icons/socket_disabled.png" title="Aún no termina el curso: Angular: Aplicaciones en tiempo real con sockets y rest"></div>
-                                <div class="col-2">
-                                    <img class="w-100 animate" src="images/icons/rxjs_disabled.png" title="Aún no termina el curso: ReactiveX - RxJs: De cero hasta los detalles"></div>
-                                <div class="col-2">
-                                    <img class="w-100 animate" src="images/icons/dart_disabled.png" title="Aún no termina el curso: Dart: De cero hasta los detalles"></div>
-                                <div class="col-2">
-                                    <img class="w-100 animate" src="images/icons/flutter-free_disabled.png" title="Aún no termina el curso: Flutter: Una introducción al Framework"></div>
-                                <div class="col-2">
-                                    <img class="w-100 animate" src="images/icons/angular-adv_disabled.png" title="Aún no termina el curso: Angular Avanzado: Lleva tus bases al siguiente nivel - MEAN"></div>
-                                <div class="col-2">
-                                    <img class="w-100 animate" src="images/icons/angular-html_disabled.png" title="Aún no termina el curso: Angular: Convierte cualquier template HTML en una WebAPP"></div>
-                                <div class="col-2">
-                                    <img class="w-100 animate" src="images/icons/progra-101_disabled.png" title="Aún no termina el curso: Programación para principiantes"></div>
-                                <div class="col-2">
-                                    <img class="w-100 animate" src="images/icons/typescript_disabled.png" title="Aún no termina el curso: TypeScript: tu completa guía y manual de mano."></div>
-                                <div class="col-2">
-                                    <img class="w-100 animate" src="images/icons/javascript_disabled.png" title="Aún no termina el curso: JavaScript: de cero hasta los detalles"></div>
-                                <div class="col-2">
-                                    <img class="w-100 animate" src="images/icons/es6_disabled.png" title="Aún no termina el curso: JavaScript: ECMAScript 6 y todos sus detalles"></div>
-                                <div class="col-2">
-                                    <img class="w-100 animate" src="images/icons/jquery-avanzado_disabled.png" title="Aún no termina el curso: jQuery Avanzado - 100 trucos profesionales"></div>
-                                <div class="col-2">
-                                    <img class="w-100 animate" src="images/icons/jquery_disabled.png" title="Aún no termina el curso: jQuery: De cero a avanzado mediante ejercicios prácticos"></div>
-                                <div class="col-2">
-                                    <img class="w-100 animate" src="images/icons/angularjs_disabled.png" title="Aún no termina el curso: AngularJS - Desde Hola Mundo hasta una Aplicación"></div>
-                                <div class="col-2">
-                                    <img class="w-100 animate" src="images/icons/vscode_disabled.png" title="Aún no termina el curso: Visual Studio Code: Mejora tu velocidad para codificar"></div>
-                                <div class="col-2">
-                                    <img class="w-100 animate" src="images/icons/plsql_disabled.png" title="Aún no termina el curso: PL/SQL de ORACLE en Español"></div>
-                                <div class="col-2">
-                                    <img class="w-100 animate" src="images/icons/restful_disabled.png" title="Aún no termina el curso: Creando Restful services PHP-MYSQL"></div>
-                                <div class="col-2">
-                                    <img class="w-100 animate" src="images/icons/herramientas_disabled.png" title="Aún no termina el curso: 60+ Herramientas de desarrollo y diseño web"></div>
-                                <div class="col-2">
-                                    <img class="w-100 animate" src="images/icons/ionic_disabled.png" title="Aún no termina el curso: ionic 2 y ionic 3: Crea apps para Android e iOS desde cero."></div>
-                                <div class="col-2">
-                                    <img class="w-100 animate" src="images/icons/m-parti-1_disabled.png" title="Aún no termina el curso: (Medalla) Participación Nivel 1"></div>
+                                <div class="col-4">
+                                    <a target="_blank" href="https://udemy-certificate.s3.amazonaws.com/image/UC-YIAX2MLT.jpg?v=1571100584000" title="PWA - Aplicaciones Web Progresivas">
+                                        <img class="w-100 animate" src="images/icons/pwa.png">
+                                    </a>
+                                </div>
+                                <div class="col-4">
+                                    <a target="_blank" href="https://udemy-certificate.s3.amazonaws.com/image/UC-71ae0d58-3f16-420d-996e-8bbb4d2b25db.jpg?v=1587589649000" title="Git - Github">
+                                        <img class="w-100 animate" src="images/icons/git-github.png">
+                                    </a>
+                                </div>
+                                <div class="col-4">
+                                    <a target="_blank" title="Photoshop">
+                                        <img class="w-100 animate" src="images/icons/photoshop.png" />
+                                    </a>
+                                </div>
                             </div>
                         </div>
                         <!-- end .col-sm-6 -->
