--- a/index.html
+++ b/index.html
@@ -8,16 +8,12 @@
     <link rel="icon" href="images/icons/favicon.png" type="image/png" />
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
-
     <script src="js/jquery-3.1.1.min.js"></script>
-
     <script src="js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="css/styles.min.css">
+    <link rel="stylesheet" href="css/animate.min.css">
     <link rel="stylesheet" href="fonts/fontawesome5.13.0/css/all.css">
-    <!-- <link rel="stylesheet" href="css/masonry-docs.css"> -->
     <link rel="manifest" href="/manifest.json">
-    <script src="js/masonry.pkgd.min.js"></script>
 
 </head>
 
@@ -199,32 +195,56 @@
                             <div class="row">
                                 <div class="col-4">
                                     <a target="_blank" title="JQuery">
-                                        <img class="w-100 animate" src="images/icons/jquery.png">
+                                        <picture>
+                                            <source srcset="images/icons/jquery.webp" media="(min-width: 0px)" type="image/webp">
+                                            <source srcset="images/icons/jquery.jpg" media="(min-width: 0px)" type="image/jpeg">
+                                            <img class="w-100 animate" src="" alt="JQuery">
+                                        </picture>
                                     </a>
                                 </div>
                                 <div class="col-4">
                                     <a target="_blank" href="https://udemy-certificate.s3.amazonaws.com/image/UC-HFYP945A.jpg?v=1524076446000" title="Angular">
-                                        <img class="w-100 animate" src="images/icons/angular.png">
+                                        <picture>
+                                            <source srcset="images/icons/angular.webp" media="(min-width: 0px)" type="image/webp">
+                                            <source srcset="images/icons/angular.jpg" media="(min-width: 0px)" type="image/jpeg">
+                                            <img class="w-100 animate" src="" alt="Angular">
+                                        </picture>
                                     </a>
                                 </div>
                                 <div class="col-4">
                                     <a target="_blank" href="https://udemy-certificate.s3.amazonaws.com/image/UC-58ffa6c7-afe6-4bb9-8245-38768d91b1b4.jpg?v=1585366985000" title="Node">
-                                        <img class="w-100 animate" src="images/icons/nodejs.png" />
+                                        <picture>
+                                            <source srcset="images/icons/nodejs.webp" media="(min-width: 0px)" type="image/webp">
+                                            <source srcset="images/icons/nodejs.jpg" media="(min-width: 0px)" type="image/jpeg">
+                                            <img class="w-100 animate" src="" alt="Node JS">
+                                        </picture>
                                     </a>
                                 </div>
                                 <div class="col-4">
                                     <a target="_blank" href="https://udemy-certificate.s3.amazonaws.com/image/UC-YIAX2MLT.jpg?v=1571100584000" title="PWA - Aplicaciones Web Progresivas">
-                                        <img class="w-100 animate" src="images/icons/pwa.png">
+                                        <picture>
+                                            <source srcset="images/icons/pwa.webp" media="(min-width: 0px)" type="image/webp">
+                                            <source srcset="images/icons/pwa.jpg" media="(min-width: 0px)" type="image/jpeg">
+                                            <img class="w-100 animate" src="" alt="PWA">
+                                        </picture>
                                     </a>
                                 </div>
                                 <div class="col-4">
                                     <a target="_blank" href="https://udemy-certificate.s3.amazonaws.com/image/UC-71ae0d58-3f16-420d-996e-8bbb4d2b25db.jpg?v=1587589649000" title="Git - Github">
-                                        <img class="w-100 animate" src="images/icons/git-github.png">
+                                        <picture>
+                                            <source srcset="images/icons/git-github.webp" media="(min-width: 0px)" type="image/webp">
+                                            <source srcset="images/icons/git-github.jpg" media="(min-width: 0px)" type="image/jpeg">
+                                            <img class="w-100 animate" src="" alt="Git y GitHub">
+                                        </picture>
                                     </a>
                                 </div>
                                 <div class="col-4">
                                     <a target="_blank" title="Photoshop">
-                                        <img class="w-100 animate" src="images/icons/photoshop.png" />
+                                        <picture>
+                                            <source srcset="images/icons/photoshop.webp" media="(min-width: 0px)" type="image/webp">
+                                            <source srcset="images/icons/photoshop.jpg" media="(min-width: 0px)" type="image/jpeg">
+                                            <img class="w-100 animate" src="" alt="Photoshop">
+                                        </picture>
                                     </a>
                                 </div>
                             </div>
@@ -238,15 +258,27 @@
                     <div class="row">
                         <div class="col-4 languageSkill">
                             Español <span>Nativo</span><br>
-                            <img src="images/flags/Colombia.png" alt="">
+                            <picture>
+                                <source srcset="images/flags/Spain.webp" media="(min-width: 0px)" type="image/webp">
+                                <source srcset="images/flags/Spain.jpg" media="(min-width: 0px)" type="image/jpeg">
+                                <img src="" alt="Spanish">
+                            </picture>
                         </div>
                         <div class="col-4 languageSkill">
                             Inglés <span>B2</span><br>
-                            <img src="images/flags/British.jpg" alt="">
+                            <picture>
+                                <source srcset="images/flags/British.webp" media="(min-width: 0px)" type="image/webp">
+                                <source srcset="images/flags/British.jpg" media="(min-width: 0px)" type="image/jpeg">
+                                <img src="" alt="English">
+                            </picture>
                         </div>
                         <div class="col-4 languageSkill">
                             Francés <span>A1</span><br>
-                            <img src="images/flags/France.png" alt="">
+                            <picture>
+                                <source srcset="images/flags/France.webp" media="(min-width: 0px)" type="image/webp">
+                                <source srcset="images/flags/France.jpg" media="(min-width: 0px)" type="image/jpeg">
+                                <img src="" alt="French">
+                            </picture>
                         </div>
                     </div>
 
@@ -320,42 +352,78 @@
 
                 <div class="grid">
                     <div class="grid-item">
-                        <img src="images/ymca_01.PNG" alt="">
+                        <picture>
+                            <source data-srcset="images/trabajos/ymca.webp" media="(min-width: 950px)" type="image/webp">
+                            <source data-srcset="images/trabajos/ymca.jpg" media="(min-width: 950px)" type="image/jpeg">
+                            <source data-srcset="images/trabajos/ymcaSmall.webp" media="(max-width: 949px)" type="image/webp">
+                            <source data-srcset="images/trabajos/ymcaSmall.jpg" media="(miax-width: 949px)" type="image/jpeg">
+                            <img src="" alt="YMCA Santander">
+                        </picture>
                         <hr>
                         <p>YMCA Santander (
                             <a href="https://www.ymcasantander.org" target="_blank">Ver más</a> )
                         </p>
                     </div>
                     <div class="grid-item">
-                        <img src="images/avante_01.PNG" alt="">
+                        <picture>
+                            <source data-srcset="images/trabajos/avante.webp" media="(min-width: 950px)" type="image/webp">
+                            <source data-srcset="images/trabajos/avante.jpg" media="(min-width: 950px)" type="image/jpeg">
+                            <source data-srcset="images/trabajos/avanteSmall.webp" media="(max-width: 949px)" type="image/webp">
+                            <source data-srcset="images/trabajos/avanteSmall.jpg" media="(miax-width: 949px)" type="image/jpeg">
+                            <img src="" alt="Avante Global School">
+                        </picture>
                         <hr>
                         <p>Avante Global School (
                             <a href="https://www.avanteglobalschool.com/" target="_blank">Ver más</a> )
                         </p>
                     </div>
                     <div class="grid-item">
-                        <img src="images/prosmart_01.PNG" alt="">
+                        <picture>
+                            <source data-srcset="images/trabajos/prosmart.webp" media="(min-width: 950px)" type="image/webp">
+                            <source data-srcset="images/trabajos/prosmart.jpg" media="(min-width: 950px)" type="image/jpeg">
+                            <source data-srcset="images/trabajos/prosmartSmall.webp" media="(max-width: 949px)" type="image/webp">
+                            <source data-srcset="images/trabajos/prosmartSmall.jpg" media="(miax-width: 949px)" type="image/jpeg">
+                            <img src="" alt="ProSmart Solutions">
+                        </picture>
                         <hr>
                         <p>ProSmart Solutions (
                             <a href="https://prosmart.com.co/" target="_blank">Ver más</a> )
                         </p>
                     </div>
                     <div class="grid-item">
-                        <img src="images/homecenter_01.PNG" alt="">
+                        <picture>
+                            <source data-srcset="images/trabajos/homecenter_persianas.webp" media="(min-width: 950px)" type="image/webp">
+                            <source data-srcset="images/trabajos/homecenter_persianas.jpg" media="(min-width: 950px)" type="image/jpeg">
+                            <source data-srcset="images/trabajos/homecenterSmall.webp" media="(max-width: 949px)" type="image/webp">
+                            <source data-srcset="images/trabajos/homecenterSmall.jpg" media="(miax-width: 949px)" type="image/jpeg">
+                            <img src="" alt="Persianas a la medida">
+                        </picture>
                         <hr>
                         <p>Homecenter: Persianas a la medida (
                             <a href="https://www.homecenter.com.co/homecenter-co/persianas-a-la-medida" target="_blank">Ver más</a> )
                         </p>
                     </div>
                     <div class="grid-item">
-                        <img src="images/puraskinlab_01.PNG" alt="">
+                        <picture>
+                            <source data-srcset="images/trabajos/puraskinlab.webp" media="(min-width: 950px)" type="image/webp">
+                            <source data-srcset="images/trabajos/puraskinlab.jpg" media="(min-width: 950px)" type="image/jpeg">
+                            <source data-srcset="images/trabajos/puraskinlabSmall.webp" media="(max-width: 949px)" type="image/webp">
+                            <source data-srcset="images/trabajos/puraskinlabSmall.jpg" media="(miax-width: 949px)" type="image/jpeg">
+                            <img src="" alt="Pura Skin Lab">
+                        </picture>
                         <hr>
                         <p>Pura Skin Lab (
                             <a href="https://puraskinlab.com/" target="_blank">Ver más</a> )
                         </p>
                     </div>
                     <div class="grid-item">
-                        <img src="images/homecenter_02.PNG" alt="">
+                        <picture>
+                            <source data-srcset="images/trabajos/homecenter_puertas.webp" media="(min-width: 950px)" type="image/webp">
+                            <source data-srcset="images/trabajos/homecenter_puertas.jpg" media="(min-width: 950px)" type="image/jpeg">
+                            <source data-srcset="images/trabajos/homecenterSmall.webp" media="(max-width: 949px)" type="image/webp">
+                            <source data-srcset="images/trabajos/homecenterSmall.jpg" media="(miax-width: 949px)" type="image/jpeg">
+                            <img src="" alt="Puertas a tu medida">
+                        </picture>
                         <hr>
                         <p>Homecenter: Puertas a la medida (
                             <a href="https://www.homecenter.com.co/homecenter-co/puertas-a-la-medida" target="_blank">Ver más</a> )
@@ -468,12 +536,48 @@
             <div class="slide-out-widget">
                 <h4>Sígueme en Instagram</h4>
                 <div class="instagram">
-                    <a href="https://www.instagram.com/jey_vega/?hl=en" target="_blank"><img src="images/instagram01.jpg" alt="alt text" class="img-responsive"></a>
-                    <a href="https://www.instagram.com/jey_vega/?hl=en" target="_blank"><img src="images/instagram02.jpg" alt="alt text" class="img-responsive"></a>
-                    <a href="https://www.instagram.com/jey_vega/?hl=en" target="_blank"><img src="images/instagram03.jpg" alt="alt text" class="img-responsive"></a>
-                    <a href="https://www.instagram.com/jey_vega/?hl=en" target="_blank"><img src="images/instagram04.jpg" alt="alt text" class="img-responsive"></a>
-                    <a href="https://www.instagram.com/jey_vega/?hl=en" target="_blank"><img src="images/instagram05.jpg" alt="alt text" class="img-responsive"></a>
-                    <a href="https://www.instagram.com/jey_vega/?hl=en" target="_blank"><img src="images/instagram06.jpg" alt="alt text" class="img-responsive"></a>
+                    <a href="https://www.instagram.com/jey_vega/?hl=en" target="_blank">
+                        <picture>
+                            <source data-srcset="images/instagram/instagram01.webp" media="(min-width: 0px)" type="image/webp">
+                            <source data-srcset="images/instagram/instagram01.jpg" media="(min-width: 0px)" type="image/jpeg">
+                            <img src="" alt="Instagram - Feria del libro">
+                        </picture>
+                    </a>
+                    <a href="https://www.instagram.com/jey_vega/?hl=en" target="_blank">
+                        <picture>
+                            <source data-srcset="images/instagram/instagram02.webp" media="(min-width: 0px)" type="image/webp">
+                            <source data-srcset="images/instagram/instagram02.jpg" media="(min-width: 0px)" type="image/jpeg">
+                            <img src="" alt="Instagram - Monserrate">
+                        </picture>
+                    </a>
+                    <a href="https://www.instagram.com/jey_vega/?hl=en" target="_blank">
+                        <picture>
+                            <source data-srcset="images/instagram/instagram03.webp" media="(min-width: 0px)" type="image/webp">
+                            <source data-srcset="images/instagram/instagram03.jpg" media="(min-width: 0px)" type="image/jpeg">
+                            <img src="" alt="Instagram - Ibagué">
+                        </picture>
+                    </a>
+                    <a href="https://www.instagram.com/jey_vega/?hl=en" target="_blank">
+                        <picture>
+                            <source data-srcset="images/instagram/instagram04.webp" media="(min-width: 0px)" type="image/webp">
+                            <source data-srcset="images/instagram/instagram04.jpg" media="(min-width: 0px)" type="image/jpeg">
+                            <img src="" alt="Instagram - Los Angeles">
+                        </picture>
+                    </a>
+                    <a href="https://www.instagram.com/jey_vega/?hl=en" target="_blank">
+                        <picture>
+                            <source data-srcset="images/instagram/instagram05.webp" media="(min-width: 0px)" type="image/webp">
+                            <source data-srcset="images/instagram/instagram05.jpg" media="(min-width: 0px)" type="image/jpeg">
+                            <img src="" alt="Instagram - Parque Simón Bolivar">
+                        </picture>
+                    </a>
+                    <a href="https://www.instagram.com/jey_vega/?hl=en" target="_blank">
+                        <picture>
+                            <source data-srcset="images/instagram/instagram06.webp" media="(min-width: 0px)" type="image/webp">
+                            <source data-srcset="images/instagram/instagram06.jpg" media="(min-width: 0px)" type="image/jpeg">
+                            <img src="" alt="Instagram - Barichara">
+                        </picture>
+                    </a>
                 </div>
                 <!-- end .instagram -->
             </div>
@@ -483,13 +587,6 @@
     </div>
 
 
-    <!-- Background video -->
-    <!-- <script src="plugins/jquery.tubular.1.0.js"></script> -->
-
-    <!-- Tool Tip Guide! -->
-    <script src="plugins/tourtipguide/static/js/tourtipguide.js"></script>
-    <link rel="stylesheet" href="plugins/tourtipguide/static/css/tourtipguide.css">
-
     <script src="js/scripts.js"></script>
 
     <!-- Service worker -->
@@ -497,10 +594,3 @@
 </body>
 
 </html>
-
-
-<!-- 
-Recomendaciones:
-- Poner foto y datos de acerca de en home.
-- En mobile no usar menú de hamburguesa sino botones.
-- Trabajos: En mobile, mostrar solo el logo de las empresas. -->
