--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <div class="blockInfo">
                             <h4>Desarrollador Web Full Stack</h4>
                             <hr>
-                            <p>Hola, soy Jeyson. Tengo 3 años de expieriencia en el desarrollo de aplicaciones. He trabajado en proyectos para optimizar el rendimiento de sitios web y mejorar la experiencia de usuario.</p>
+                            <p>Hola, soy Jeyson. Tengo 3 años de experiencia en el desarrollo de aplicaciones. He trabajado en proyectos para optimizar el rendimiento de sitios web y mejorar la experiencia de usuario.</p>
                             <a type="button" class="btn btn-info btnDownload" href="assets/pdf/HVJeysonVega_1.pdf" download="Perfil">Descargar perfil</a>
                         </div>
                     </div>
