--- a/index.html
+++ b/index.html
@@ -239,6 +239,15 @@
                                     </a>
                                 </div>
                                 <div class="col-4">
+                                    <a target="_blank" title="React">
+                                        <picture>
+                                            <source srcset="images/icons/react.webp" media="(min-width: 0px)" type="image/webp">
+                                            <source srcset="images/icons/react.png" media="(min-width: 0px)" type="image/jpeg">
+                                            <img class="w-100 animate" src="" alt="React">
+                                        </picture>
+                                    </a>
+                                </div>
+                                <!-- <div class="col-4">
                                     <a target="_blank" title="Photoshop">
                                         <picture>
                                             <source srcset="images/icons/photoshop.webp" media="(min-width: 0px)" type="image/webp">
@@ -246,7 +255,7 @@
                                             <img class="w-100 animate" src="" alt="Photoshop">
                                         </picture>
                                     </a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                         <!-- end .col-sm-6 -->
@@ -296,7 +305,7 @@
                             </div>
                             <div class="content">
                                 <h5>Web Developer</h5>
-                                <p>Desarrollo de aplicaciones web y administración de tags a través de Dynamic Tag Manager. Automatización de tareas y webscrapping.</p>
+                                <p>Desarrollo y mantenimiento de aplicaciones web (angular/react y node js/.net). Administración de tag manager sitio web. Automatización de tareas y webscrapping (NodeJS).</p>
                             </div>
                             <div class="icon">
                                 <i class="fab fa-js"></i>
@@ -427,6 +436,32 @@
                         <hr>
                         <p>Homecenter: Puertas a la medida (
                             <a href="https://www.homecenter.com.co/homecenter-co/puertas-a-la-medida" target="_blank">Ver más</a> )
+                        </p>
+                    </div>
+                    <div class="grid-item">
+                        <picture>
+                            <source data-srcset="images/trabajos/microblend.webp" media="(min-width: 950px)" type="image/webp">
+                            <source data-srcset="images/trabajos/microblend.jpg" media="(min-width: 950px)" type="image/jpeg">
+                            <source data-srcset="images/trabajos/homecenterSmall.webp" media="(max-width: 949px)" type="image/webp">
+                            <source data-srcset="images/trabajos/homecenterSmall.jpg" media="(miax-width: 949px)" type="image/jpeg">
+                            <img src="" alt="Microblend">
+                        </picture>
+                        <hr>
+                        <p>Homecenter: Microblend (
+                            <a href="https://www.homecenter.com.co/homecenter-co/microblend-v1" target="_blank">Ver más</a> )
+                        </p>
+                    </div>
+                    <div class="grid-item">
+                        <picture>
+                            <source data-srcset="images/trabajos/pantallas3.webp" media="(min-width: 950px)" type="image/webp">
+                            <source data-srcset="images/trabajos/pantallas3.jpg" media="(min-width: 950px)" type="image/jpeg">
+                            <source data-srcset="images/trabajos/homecenterSmall.webp" media="(max-width: 949px)" type="image/webp">
+                            <source data-srcset="images/trabajos/homecenterSmall.jpg" media="(miax-width: 949px)" type="image/jpeg">
+                            <img src="" alt="Pantallas 3.0">
+                        </picture>
+                        <hr>
+                        <p>Homecenter: Pantallas 3.0 (
+                            <a href="https://zealous-bay-02cf95c0f.azurestaticapps.net/" target="_blank">Ver más</a> )
                         </p>
                     </div>
                 </div>
